# SlashmadFFmpegGUI

./: .gitignore  LICENSE  README.md  dev_run.sh  pyproject.toml
data/: com.slashmad.SlashmadFFmpegGUI.desktop  com.slashmad.SlashmadFFmpegGUI.metainfo.xml  com.slashmad.TimelapseFFmpegGUI.desktop  com.slashmad.TimelapseFFmpegGUI.metainfo.xml  io.github.slashmad.SlashmadFFmpegGUI.desktop  io.github.slashmad.SlashmadFFmpegGUI.metainfo.xml
flatpak/: com.slashmad.SlashmadFFmpegGUI.yml  com.slashmad.TimelapseFFmpegGUI.yml  io.github.slashmad.SlashmadFFmpegGUI.yml
src/ffmpeg_gui/: __init__.py  app.py  capture.py  edit.py  encode.py  ffmpeg.py  gui.py  i18n.py  runner.py  ui.py  vapoursynth_page.py  vapoursynth_process.py  vs_stack.py
src/ffmpeg_gui/ui/: capture_page.ui  edit_page.ui  encode_page.ui  hardware_page.ui  help_page.ui  vapoursynth_page.ui  vapoursynth_process_page.ui
