[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ffmpeg-gui"
version = "0.1.0"
description = "GTK4 GUI for FFmpeg"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
ffmpeg-gui = "ffmpeg_gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]
