[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slashmad-ffmpeg-gui"
version = "0.2.3"
description = "GTK4 FFmpeg capture, edit, and encode GUI by slashmad"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "slashmad"}]
keywords = ["ffmpeg", "linux", "vhs", "capture", "magix", "usb-video-capture", "digitization", "analog-video"]
urls = {Repository = "https://github.com/slashmad/SlashmadFFmpegGUI", Issues = "https://github.com/slashmad/SlashmadFFmpegGUI/issues"}

[project.scripts]
slashmad-ffmpeg-gui = "ffmpeg_gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ffmpeg_gui = ["ui/*.ui"]
